# topcv-data-pipeline

./: .gitignore  Dockerfile  README.md  crop_coords.csv  docker-compose.yaml  download_checkpoint.json  everbee_shop_data_listings.csv  everbee_shop_data_listings.xlsx  extract_log.csv  heyetsy_checkpoint.csv  heyetsy_image_urls.csv  hidden_listings.csv  main.py  pyproject.toml  requirements.txt  reviews.csv  trello_card_map.json  trello_card_map_test.json
data-files/: everbee_checkpoint.csv  everbee_checkpointdsad.csv  everbee_data.xlsx  everbee_shop_data_listings.csv  everbee_shop_data_listings.xlsx  everbee_shop_data_listings1.csv  everbee_shop_data_listings1.xlsx  everbee_shop_data_shops.csv  everbee_shop_data_shops.xlsx  heyetsy_checkpoint.csv  heyetsy_image_urls1.csv  topcv_data_jobs.csv  topcv_data_jobs.xlsx
data-ingestion/: ingest_data.py
job-scraper/: Untitled-1.txt  everbee_data_scraper.py  topcv_data_scraper.py  topcv_job_urls.csv
job_scraper/: topcv_scraper.py
mockup-generator/: annotate_crop.py  compose_mockup.py  config_mockup.py  configs.json  core_compositor.py  extract_art.py  remove_background.py  sides_compositor.py  single_compositor.py
output/: replace_mockup.csv
product-scraper/: csv_image_export.py  csv_review_export.py  etsy_check_hidden_listing.py  etsy_review_scraper.py  everbee_api_scraper.py  everbee_api_shop_scraper.py  everbee_data_scraper.py  heyetsy_bulk_downloader.py  heyetsy_image_scraper.py  heyetsy_image_v2_scraper.py  heyetsy_tags_scraper.py  test.py  trello_update_card_name.py  trello_update_description.py  (+4 more)
test/: test.py  (+2 more)
(+15 files in other folders)
