[project]
name = "web-scrapers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "psycopg>=3.3.3",
    "pyarrow>=23.0.1",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pgcli>=4.4.0",
]
